# realtime-misinfo-detector

./: .gitignore  api.py  app.py  requirements.txt
backend/: main.py  medical_detector.db  pyproject.toml  routers.py  schemas.py  testcontext.py
backend/database/: db.py
backend/models/: fake_detector.py  medical_classifier.py
backend/services/: pubmed_service.py  wikipedia_service.py
frontend/: app.py
models/: fake_detector.py  medical_classifier.py
services/: pubmed_service.py  wikipedia_service.py
