[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend Services for realtime misinformation detection"
authors = ["Vladimir Margaryan <v.margaryan204@gmail.com>", 
           "Vahagn Ghazaryan <vahagn.ghazayan@gmail.com>",
           "Christina Hakobyan <christinahakobyan19@gmail.com>",
           "Syuzanna Khalatyan <syuzi784@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
